--- a/src/app/components/polaroid-card/polaroid-card.component.html
+++ b/src/app/components/polaroid-card/polaroid-card.component.html
@@ -7,7 +7,7 @@
 
     <!-- Parte preta (foto do álbum) -->
     <div class="bg-white p-1 rounded-md">
-      <div class="w-full h-[450px] bg-[url('https://i.pinimg.com/736x/79/d1/17/79d117125ca2917d41af9c92dec30ab1.jpg')] bg-cover bg-center rounded-md"></div>
+      <div class="w-full h-[500px] rounded-md border-[3px] border-black bg-[url('https://i.pinimg.com/736x/79/d1/17/79d117125ca2917d41af9c92dec30ab1.jpg')] bg-cover bg-center"></div>
     </div>
 
     <app-icon-music></app-icon-music>
