Subindo projeto antes de implementar o QR code

--- a/src/app/components/polaroid-card/polaroid-card.component.html
+++ b/src/app/components/polaroid-card/polaroid-card.component.html
@@ -105,7 +105,16 @@
 
       <p class="mb-4">Amém, irmã Débora? 🙏</p>
 
-      <p class="mb-4">Me dê um abraço quando terminar de ler.</p>
+      <p class="mb-4">Me dê um abraço quando terminar de ler. </p>
+
+      <p class="mb-4">E por fim.
+        Seja minha garota, a pessoa pela qual vou passar a vida cuidando,
+        vamo vivendo e se conhecendo mais e ajudando um ao outro sem medo do que poderá vir,
+        eu por tu e tu por eu e nos problemas vamos ser eu e tu contra eles
+        e nunca um contra o outro.
+      </p>
+
+      <p class="mb-4">Eu te amo</p>
 
       <p class="text-right font-semibold mt-6">
         Do seu garoto de programa favorito,
