--- a/src/app/components/lovers/lovers.component.html
+++ b/src/app/components/lovers/lovers.component.html
@@ -1,6 +1,6 @@
 <!-- CONTADOR DIGITAL (Angular) -->
 <div class="w-full flex flex-col items-center mt-8">
-  <h2 class="text-black text-center font-semibold text-lg mb-4">Contador iniciado desde o dia que te dei o primeiro beijo 10/02/2025</h2>
+  <h2 class="text-black text-center font-semibold text-lg mb-4">Contador iniciado desde que te pedi em namoro 10/02/2025</h2>
   <div class="flex justify-center w-full max-w-xl text-white font-mono text-2xl bg-gray-900 rounded-lg py-6 px-6 space-x-6">
 
     <div class="flex flex-col items-center">
