--- a/src/app/components/polaroid-card/polaroid-card.component.html
+++ b/src/app/components/polaroid-card/polaroid-card.component.html
@@ -5,10 +5,7 @@
   <!-- Moldura estilo Polaroid maior -->
   <div class="bg-white w-full max-w-xl rounded-md pt-8 pb-10 px-8 shadow-lg">
 
-    <!-- Parte preta (foto do álbum) -->
-    <div class="bg-white p-1 rounded-md">
-      <div class="w-full h-[500px] rounded-md border-[3px] border-black bg-[url('https://i.pinimg.com/736x/79/d1/17/79d117125ca2917d41af9c92dec30ab1.jpg')] bg-cover bg-center"></div>
-    </div>
+    <app-photo-slice></app-photo-slice>
 
     <app-icon-music></app-icon-music>
 
@@ -124,6 +121,7 @@
     </div>
 
     <app-contador></app-contador>
+    <app-lovers></app-lovers>
 
   </div>
 
