--- a/src/app/components/photo-slice/photo-slice.component.html
+++ b/src/app/components/photo-slice/photo-slice.component.html
@@ -1,7 +1,9 @@
 <div class="bg-white p-1 rounded-md relative w-full max-w-xl mx-auto">
 
   <!-- Imagem atual com MENOS ZOOM -->
-  <div class="w-full h-[450px] rounded-md border-[5px] border-black overflow-hidden flex items-center justify-center bg-black">
+
+  <!-- alterei de 450 para 400 -->
+  <div class="w-full h-[400px] rounded-md border-[5px] border-black overflow-hidden flex items-center justify-center bg-black">
     <img
       [src]="images[currentIndex]"
       alt="Imagem do álbum"
